--- a/style.css
+++ b/style.css
@@ -2,4 +2,34 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  font-size: 100%;
+}
+
+header {
+  text-align: center;
+}
+
+figure {
+  font-size: 80%;
+  text-align: center;
+}
+nav a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: gray;
+}
+
+#featured-property p {
+  width: 800px;
+  text-align: center;
+  margin: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+#details div {
+  float: left;
+  width: 25%;
+  text-align: center;
+  background-color: red;
 }
